css/style.css
body {
  max-width: 640px;
  padding-left: 8px;
  padding-right: 8px;
  margin-left: auto;
  margin-right: auto;
}

em {
  font-style: normal;
  font-weight: bold;
}

.content {
  max-width: 608px;
  margin-top: 8px;
  margin-bottom: 8px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  border: 1px solid rgb(217,217,215);
  border-radius: 5px;
}

h1.title {
  margin: 0;
  padding: 0;
  padding-top: 10px;
  padding-bottom: 10px;

  font-size: 24px;
  line-height: 34px;
  font-weight: normal;

  text-align: center;
  color: #333;
}

.inner-text {
  max-width: 594px;
  padding-top: 28px;
  padding-bottom: 28px;
  padding-left: 8px;
  padding-right: 8px;
  /*
  margin-left: 4px;
  margin-right: 4px;
  */
  border: 1px solid rgb(217,217,215);
  border-top: none;
  z-index: 90;
  font-size: 14px;
  line-height: 18px;
}

.back-to-main.top {
  border-bottom: 1px solid rgb(217,217,215);
}
.back-to-main.bottom {
  text-align: right;
}
.back-to-main a {
  height: 30px;
  display: block;
  line-height: 30px;
}

.tail-image {
  text-align: center;
}
.tail-image img {
  width: 66%;
}

.last {
  margin-bottom: 6px;
}

.index-logo {
  text-align: center;
  max-width: 594px;
  padding-top: 10px;
  padding-bottom: 20px;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid rgb(217,217,215);
  border-top: none;
  border-bottom: none;
  z-index: 90;
}
.index-logo img {
  width: 85%;
}

.paper hr {
  color: rgb(217,217,215);
  background-color: rgb(217,217,215);
  border: 1px solid rgb(217,217,215);
}

.navbar {
  max-width: 596px;
  margin-left: auto;
  margin-right: auto;
  margin-top : 16px;
  margin-bottom: 0;
}
.navbar.fixed {
  position: fixed;
  /*margin: 0 0 0 -20px;*/
  margin: 0;
  top: 0;
  box-shadow: 0 4px 8px -6px #000;
  z-index: 100;
}
.navbar.fixed a,
.navbar.fixed ul.nav li a {
  padding-top: 1px;
  padding-bottom: 0;
}
.navbar.fixed .navbar-inner {
  min-height: 25px;
}

.navbar.fixed + * {
  padding-top: 70px;
}

.navbar-inner {
  padding-left: 6px;
  padding-right: 6px;

  border: 1px solid rgb(217,217,215);
  -webkit-border-radius: 0;
     -moz-border-radius: 0;
          border-radius: 0;
  -webkit-box-shadow: none;
     -moz-box-shadow: none;
          box-shadow: none;

  background-color: rgb(246,246,244);
  background-image : none;
}


.content .navbar .nav > li:before {
  content: " / ";
  color: rgb(81,44,51);
}
.content .navbar .nav > li:nth-child(1):before {
  content: "";
}
.content .navbar .nav > li > a {
    display: inline-block;
}


.cork {
  background: rgba(157,126,95, 0.7);
}

.paper {
  background: rgb(246,246,244);
}

h1 h2 {
/* font-family: 'Fjalla One', sans-serif; */
/* font-family: 'Carrois Gothic', sans-serif; */
}

.red {
color: rgb(248, 70, 66);
}

.navbar .nav > li > a {
  padding: 10px 6px 10px;
/*  color: #777777; */
  color: rgb(81,44,51);
  text-decoration: none;
  text-shadow: none;
/*  text-shadow: 0 1px 0 #ffffff; */
}

/*
 * content
 */

.ribbon {
    text-align: center;
    position: relative;
    color: #fff;    
    margin: 0 -16px 0 -16px;
    padding: 10px 0; 
    /* text-shadow: 0 1px rgba(0,0,0,.8); */
    /*background: rgb(248,70,66);*/
    background-color: #294173; 
    background-image: -moz-linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0));
    background-image: -webkit-linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0));
    background-image: -o-linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0));
    background-image: -ms-linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0));
    background-image:  linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0));
    -moz-box-shadow: 0 2px 0 rgba(0,0,0,0);
    -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0);
    box-shadow: 0 2px 0 rgba(0,0,0,0);
}

.ribbon:before, .ribbon:after {
    content: '';
    position: absolute;
    border-style: solid;
    border-color: transparent;
    bottom: -10px;
}
.ribbon:before {
    border-width: 0 7px 10px 0;
    border-right-color: #222;
    left: 0;
}
.ribbon:after {
    border-width: 0 0 10px 7px;
    border-left-color: #222;
    right: 0;
}

.ribbon h4 {
  margin: 0;
  font-weight: normal;
}
.ribbon h4 .name {
  padding-left: 5px;
  padding-right: 5px;
  font-weight: bold;
}

.inner-text h4 {
  text-align: right;
  font-size: 15px;
  margin-top: 0;
  margin-bottom: 20px;
  color: #666;
  font-weight: normal;
}

/* location */

.location {
  max-width: 90%;
  margin: 0 auto;
}
.location img {
  border: 3px solid rgb(213,193,130);
}
.location .address {
  padding: 10px 0 10px 10px;
  font-size: 10px;
  color: #666;
  text-align: right;
}

/* message */
.message {
  font-size: 12px;
}

/* info */
.info .date {
  font-size: 15px;
  font-weight: bold;
}

/* how-to */
.how-to {
  font-size: 11px;
}
.how-to figure {
  margin: 0;
  margin-bottom: 15px;
}
.how-to figcaption {
  font-size: 12px;
  font-weight: bold;
  color: darkblue;
}
.how-to ul {
  list-style: none;
  margin: 0;
}
.how-to ul,
.how-to p {
  margin-left: 20px;
}
.how-to em.transport {
  font-size: 12px;
  padding-right: 5px;
}

/* parking-facilities */
.parking-facilities figure {
  margin: 40px 0;
  text-align: center;
}
.parking-facilities figure img {
  width: 90%;
}
.parking-facilities figcaption {
  margin-top: 10px;
  text-align: left;
}


/*
 * Swiper
 */
.swiper-slide {
  text-align: center;
  margin-bottom: 30px;
}

/* description */
.swiper-slide .description {
  text-align: center;
  font-size: 16px;
  margin-bottom: 0;
}
.swiper-slide .date {
  padding-right: 7px;
  padding-bottom: 7px;
  font-size: 12px;
  color: #666;
}
.swiper-slide .date:before {
  content: "(";
}
.swiper-slide .date:after {
  content: ")";
}
/* pagiation */
#gallery .swiper-container-horizontal > .swiper-pagination {
  bottom: 0px;
}

